# platelet-tracking

./: LICENSE  README.md  enviroment.yml  setup.cfg
.github/workflows/: test-and-deploy.yml
examples/: analyse_tracks.py  debug-plugin.py  debug.py  test_tracks_scale.py  track_platelets.py  tracks_stats.py  view_psel.py  view_tracks_ex_vivo.py  view_tracks_in_vivo.py
platelet_tracking/: dock_widgets.py  napari.yaml  platelet_info.py
src/platetrack/: __init__.py  _io.py  dock_widgets.py  napari.yaml  platelet_info.py
