[metadata]
name = platelet-tracking
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    scikit-image
    numpy
    trackpy
[options.entry_points]
napari.manifest =
    platelet-tracking = platelet_tracking:napari.yaml