[metadata]
name = platetrack
version = 0.0.3
classifiers =
    Framework :: napari
    Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
install_requires =
    napari
    numpy
    trackpy
    pandas
    plateletanalysis
    qtpy
    pyqt5
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    platetrack = platetrack:napari.yaml

[options.package_data]
platetrack = napari.yaml