[metadata]
name = platetrack
author = Abigail S McGovern 
author_email = abigail_mcgovern@hotmail.com
url = https://github.com/AbigailMcGovern/platelet-tracking
license = BSD-3-Clause
description = napari plugin for tracking platelets with trackpy
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.6
classifiers =
    Framework :: napari
    Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
project_urls = 
	Bug Tracker = https://github.com/abigailmcgovern/platelet-tracking/issues
	Documentation = https://github.com/abigailmcgovern/platelet-tracking#README.md
	Source Code = https://github.com/abigailmcgovern/platelet-tracking
	User Support = https://github.com/abigailmcgovern/platelet-tracking/issues


[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
install_requires =
    napari
    numpy
    trackpy
    pandas
    plateletanalysis
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    platetrack = platetrack:napari.yaml

[options.package_data]
platetrack = napari.yaml
